Update PR template to use proper directories

--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -31,9 +31,12 @@ jobs:
         
         corral update
 
-        cd ./src/server
+        cd ./src
         corral run -- ponyc 
-        
-        cd ../../test
+
+        cd ../test
         corral run -- ponyc
         ./test
+
+        cd ../bench
+        corral run -- ponyc
